# badgeland

./: .dockerignore  .editorconfig  .gitignore  .graphqlconfig.yaml  .mise.toml  Cargo.toml  Dockerfile  LICENSE  Procfile  Readme.md  RustConfig  app.json  app.yaml  package.json  release.toml  rustfmt.toml  schema.graphql
badge-maker/: Cargo.toml
badge-maker/src/: badge.rs  icons.rs  lib.rs
badge-web/: Cargo.toml  README.md
badge-web/src/: badge_routes.rs  main.rs
badge-web/src/services/: crates_io.rs  github.rs  mod.rs  npm.rs  utils.rs
badge-web/src/services/utils/: humanize.rs  mod.rs
badge-web/src/utils/: mod.rs
badgeland/: Cargo.toml  Readme.md  sailfish.toml
badgeland-web/: Cargo.toml  Readme.md
badgeland-web/src/: badge_routes.rs  main.rs
badgeland-web/src/utils/: error.rs  mod.rs
badgeland/benches/: badge_benchmark.rs  divan_badge_bench.rs
badgeland/build_scripts/: build.rs
badgeland/examples/: badge_default.rs
badgeland/src/: badge_data.rs  color.rs  icons.rs  lib.rs
badgeland/src/badge/: content.rs  mod.rs  size.rs  style.rs
badgeland/src/badge/templates/: mod.rs
badgeland/src/error/: mod.rs
badgeland/templates/: classic.stpl  content.stpl  flat.stpl  social.stpl
benches/: badge_benchmark.rs
build_scripts/: build.rs
examples/: badge_default.rs
humanize/: Cargo.toml  release.toml
humanize/src/: lib.rs
merit/: Cargo.toml  Readme.md
merit-api/: Cargo.toml  README.md
merit-api/src/: badge_routes.rs  main.rs
merit-api/src/resx/: github_query.graphql  github_schema.graphql
merit-api/src/services/: crates_io.rs  github.rs  mod.rs  npm.rs
merit-api/src/utils/: error.rs  mod.rs
merit-web/: Cargo.toml  Readme.md
merit-web/src/: badge_routes.rs  main.rs
merit/benches/: badge_benchmark.rs
merit/build_scripts/: build.rs
merit/src/: icons.rs  lib.rs
merit/src/badge/: content.rs  mod.rs
scripts/: download-simple-icons.ts
src/: badge.rs  icons.rs  lib.rs  main.rs
src/badge/: content.rs  mod.rs
static/: 404.html  index.html
