[package]
name = "badge-maker"
version = "0.1.0"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cssparser = "0.25.5"
hashbrown = "0.3"
lazy_static = "1.3"
maud = "0.20"
rusttype = "0.7"
scraper = "0.10"
unicode-normalization = "0.1"
