[package]
name = "badge-web"
version = "0.1.0"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-files = "0.1.0-beta.4"
actix-web = "1.0.0-beta.5"
badge-maker = { version = "0", path = "../badge-maker" }
listenfd = "0.3"
markup = "0.3.1"
reqwest = "0.9.16"
serde = "1.0.91"
serde_derive = "1.0"
