[package]
name = "badge-web"
version = "0.1.0"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-files = "0.1"
actix-web = { version = "1.0", features = ["ssl"] }
badger = { version = "0", path = ".." }
chrono = "0.4"
dotenv = "0.14"
env_logger = "0.7"
futures = "0.1"
humanize = { version = "0", path = "../humanize" }
itertools = "0.8"
listenfd = "0.3"
markup = "0.4.1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
