[package]
name = "badgeland"
version = "0.12.0"
description = "Fast badge generator for any purpose"
license = "MIT"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"
readme = "Readme.md"
repository = "https://github.com/msuntharesan/badgeland"
publish = true

build = "./build_scripts/build.rs"

[dependencies]
ab_glyph = "0.2"
cssparser = "0.28"
maud = "0.22"
phf = { version = "0.9", optional = true }
unicode-normalization = "0.1"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["derive", "suggestions", "color"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = "0.3"
scraper = "0.12"
rand = "0.8.4"

[build-dependencies]
phf_codegen = "0.9"
scraper = "0.12"

[features]
serde_de = ["serde"]
static_icons = ["phf"]
default = ["clap", "static_icons"]

[[bin]]
name = "cargo-badge"
required-features = ["default"]

[[bench]]
name = "badge_benchmark"
harness = false
