[package]
name = "badgeland"
version = "0.13.0"
description = "Fast badge generator for any purpose"
license = "MIT"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"
readme = "Readme.md"
repository = "https://github.com/msuntharesan/badgeland"
publish = true

build = "./build_scripts/build.rs"

[dependencies]
ab_glyph = "0.2"
cssparser = "0.29"
maud = "0.24"
once_cell = "1.13"
phf = { version = "0.11", optional = true }
thiserror = "1.0"
unicode-normalization = "0.1"

[dependencies.clap]
version = "4"
features = ["derive", "suggestions", "color"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = "0.4"
rand = "0.8.4"
scraper = "0.13"

[build-dependencies]
phf_codegen = "0.11"
scraper = "0.13"

[features]
serde_de = ["serde"]
static_icons = ["phf"]
default = ["clap", "static_icons"]

[[bin]]
name = "cargo-badge"
required-features = ["default"]

[[bench]]
name = "badge_benchmark"
harness = false
