[package]
name = "badgeland"
version = "0.14.0"
description = "Fast badge generator for any purpose"
license = "MIT"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2024"
readme = "Readme.md"
repository = "https://github.com/msuntharesan/badgeland"
publish = true

build = "./build_scripts/build.rs"

[dependencies]
ab_glyph = "0.2"
cssparser = "0.35.0"
cssparser-color = "0.3.0"
once_cell = "1.21.3"
phf = { version = "0.13.1", optional = true }
sailfish = "0.10.0"
thiserror = "2.0.16"
unicode-normalization = "0.1"

[dependencies.clap]
version = "4"
features = ["derive", "suggestions", "color"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
# criterion = "0.5"
divan = "0.1"
rand = "0.9.2"
scraper = "0.24.0"
serde_test = "1.0"

[build-dependencies]
phf_codegen = "0.13.1"
scraper = "0.24.0"

[features]
serde_de = ["serde"]
static_icons = ["phf"]
cli = ["clap"]
default = ["static_icons"]

[[bin]]
name = "cargo-badge"
required-features = ["cli"]

# [[bench]]
# name = "badge_benchmark"
# harness = false

[[bench]]
name = "divan_badge_bench"
harness = false
