[package]
name = "merit-api"
version = "0.1.0"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-rt = "1"
actix-web = "2.0"
merit = { version = "0", path = ".." }
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.7"
flame = "0.2"
flamer = "0.4"
futures = "0.3"
humanize = { version = "0", path = "../humanize" }
itertools = "0.8"
listenfd = "0.3"
markup = "0.4.1"
reqwest = {version =  "0.10", features = ["json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
