[package]
name = "merit-api"
version = "0.1.0"
authors = ["Suntharesan Mohan <suntharesan.mohan@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-files = "0.2"
actix-rt = "1"
actix-web = "2.0"
awc = { version = "2.0.0-alpha.2", features = ["rustls"] }
merit = { version = "0", path = "..", features = ["serde_de"] }
dotenv = "0.15"
env_logger = "0.7"
futures = { version = "=0.3.5", features = ["compat"] }
humanize = { version = "0", path = "../humanize" }
listenfd = "0.3"
markup = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"
